# pico-openpgp

./: .gitmodules  CMakeLists.txt  ENTERPRISE.md  README.md  VERSION  build_pico_openpgp.sh  patch_vidpid.sh  sdkconfig.defaults
.github/workflows/: codeql.yml  nightly.yml  test.yml
src/openpgp/: CMakeLists.txt  cmd_activate_file.c  cmd_challenge.c  cmd_change_pin.c  cmd_get_data.c  cmd_import_data.c  cmd_internal_aut.c  cmd_keypair_gen.c  cmd_mse.c  cmd_pso.c  cmd_put_data.c  cmd_reset_retry.c  cmd_select.c  cmd_select_data.c  cmd_terminate_df.c  cmd_verify.c  cmd_version.c  defs.c  do.c  do.h  files.c  files.h  management.c  management.h  openpgp.c  openpgp.h  piv.c  version.h
tests/: brainpoolp256r1_keys.py  brainpoolp384r1_keys.py  brainpoolp512r1_keys.py  card_const.py  card_reader.py  card_test_0_set_attr.py  card_test_1_import_keys.py  card_test_1_keygen.py  card_test_2_pkop.py  card_test_2_pkop_kg.py  card_test_3_ds_counter1.py  card_test_3_ds_counter2.py  card_test_check_card.py  card_test_empty_card.py  card_test_kdf_full.py  card_test_kdf_single.py  card_test_keygen.py  card_test_kg_pko_dsc_brainpoolp256r1.py  card_test_kg_pko_dsc_brainpoolp384r1.py  card_test_kg_pko_dsc_brainpoolp512r1.py  card_test_kg_pko_dsc_curve25519.py  card_test_kg_pko_dsc_nistp256r1.py  card_test_kg_pko_dsc_nistp384r1.py  card_test_kg_pko_dsc_nistp521r1.py  card_test_kg_pko_dsc_rsa2k.py  card_test_kg_pko_dsc_rsa4k.py  card_test_kg_pko_dsc_secp256k1.py  card_test_ki_pko_dsc_brainpoolp256r1.py  card_test_ki_pko_dsc_brainpoolp384r1.py  card_test_ki_pko_dsc_brainpoolp512r1.py  card_test_ki_pko_dsc_curve25519.py  card_test_ki_pko_dsc_nistp256r1.py  card_test_ki_pko_dsc_nistp384r1.py  card_test_ki_pko_dsc_nistp521r1.py  card_test_ki_pko_dsc_rsa2k.py  card_test_ki_pko_dsc_rsa4k.py  card_test_ki_pko_dsc_secp256k1.py  card_test_personalize_admin_less_1.py  card_test_personalize_admin_less_2.py  card_test_personalize_card_1.py  (+28 more)
tests/000_config/: test_000_config_card.py
tests/001_initial_check/: test_000_initial_card.py  test_001_initial_card.py
tests/010_kdfnone/: test_010_adminfull_kdfnone.py  test_011_adminfull_kdfnone.py  test_012_adminfull_kdfnone.py  test_013_adminfull_kdfnone.py  test_014_keygen_kdfnone.py  test_015_keygen_kdfnone.py  test_016_keygen_kdfnone.py  test_017_adminfull_kdfnone.py  test_018_adminfull_kdfnone.py  test_019_adminfull_kdfnone.py  test_040_adminless_kdfnone.py  test_041_adminless_kdfnone.py  test_042_adminless_kdfnone.py  test_043_adminless_kdfnone.py  test_044_adminless_kdfnone.py  test_045_adminless_kdfnone.py  test_046_adminless_kdfnone.py
tests/020_kdffull/: conftest.py
tests/020_kdffull/01_initial_check/: test_050_adminfull_kdffull.py
tests/020_kdffull/02_personalization/: test_051_adminfull_kdffull.py
tests/020_kdffull/03_key_import/001_rsa2k/: test_rsa2k_import.py
tests/020_kdffull/03_key_import/002_nistp256r1/: test_nistp256r1_import.py
tests/020_kdffull/03_key_import/003_brainpoolp256r1/: test_brainpoolp256r1_import.py
tests/020_kdffull/03_key_import/004_secp256k1/: test_secp256k1_import.py
tests/020_kdffull/03_key_import/005_nistp384r1/: test_nistp384r1_import.py
tests/020_kdffull/03_key_import/006_brainpoolp384r1/: test_brainpoolp384r1_import.py
tests/020_kdffull/03_key_import/008_nistp521r1/: test_nistp521r1_import.py
tests/020_kdffull/03_key_import/009_brainpoolp512r1/: test_brainpoolp521r1_import.py
tests/020_kdffull/04_keygen/001_rsa2k/: test_rsa2k_keygen.py
tests/020_kdffull/04_keygen/003_brainpoolp256r1/: test_brainpoolp256r1_keygen.py
tests/020_kdffull/04_keygen/004_secp256k1/: test_secp256k1_keygen.py
tests/020_kdffull/04_keygen/005_nistp384r1/: test_nistp384r1_keygen.py
tests/020_kdffull/04_keygen/006_brainpoolp384r1/: test_brainpoolp384r1_keygen.py
tests/020_kdffull/04_keygen/008_nistp521r1/: test_nistp521r1_keygen.py
tests/020_kdffull/04_keygen/009_brainpoolp512r1/: test_brainpoolp521r1_keygen.py
tests/020_kdffull/04_keygen/010_curve25519/: test_curve25519_keygen.py
tests/020_kdffull/05_finalize/: test_000_reset_to_TEST4.py  test_057_adminfull_kdffull.py  test_058_adminfull_kdffull.py  test_059_adminfull_kdffull.py
tests/030_kdfsingle/: test_060_adminfull_kdfsingle.py  test_061_adminfull_kdfsingle.py  test_062_adminfull_kdfsingle.py  test_063_adminfull_kdfsingle.py  test_064_adminfull_kdfsingle.py  test_065_adminfull_kdfsingle.py  test_066_adminfull_kdfsingle.py  test_070_adminless_kdfsingle.py  test_071_adminless_kdfsingle.py  test_072_adminless_kdfsingle.py  test_073_adminless_kdfsingle.py  test_074_adminless_kdfsingle.py  test_075_adminless_kdfsingle.py  test_076_adminless_kdfsingle.py
tests/090_finalize/: test_080_kdf_none.py  test_091_reset_attr.py
tests/docker/bullseye/: Dockerfile
tests/docker/jammy/: Dockerfile  yubico-piv-tool.patch
tests/scripts/: attestation.sh  cli-test.sh  func.sh  keygen.sh  signatures.sh  version.sh  yubico-piv-tool.sh
tool/: kdf_calc.py
workflows/: autobuild.sh
